fixed bottom overflow

--- a/FinalWebsite/style/main.sass
+++ b/FinalWebsite/style/main.sass
@@ -214,8 +214,7 @@ figure
 .wrapper-discussion
   height: auto
   position: relative
-  padding: 5rem
-  padding-bottom: 5rem
+  padding-bottom: 15rem
   background-color: rgb(245, 245, 245)
   .forum-container
     height: auto
